[metadata]
name=botCasClient
version=21.09.22
author = gunville
author_email = rk13088@yahoo.com
description = CAS Client (SP) for Bottle
long_description = file: README.md
long_description_content_type = text/markdown
license_files = License.txt
url = https://github.com/Glocktober/botCasClient
project_urls =
    repo = https://github.com/Glocktober/botCasClient
    overview = https://github.com/Glocktober/botCasClient/blob/main/README.md
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Bottle
keywords='bottle CAS plugin'
[options]
package_dir = 
    = src
packages = find:
install_requires =
    bottle>=0.12.0
    BottleSessions>=21.09.01
    defusedxml>=0.7.1
    requests>=2.20.0
    jinja2>=3.0.0 
python_requires = >=3.6
[options.package_data]
* = *.xml
[options.data_files]
[options.packages.find]
where = src
